# vala-sample

./: com.knuxbbs.ValaSample.json  meson.build
data/: com.knuxbbs.ValaSample.appdata.xml.in  com.knuxbbs.ValaSample.desktop.in  com.knuxbbs.ValaSample.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.vala  meson.build  valasample.gresource.xml  window.ui  window.vala
